fixed buttons on mobile safari

--- a/src/components/StateSwitcher/SwitchState.module.scss
+++ b/src/components/StateSwitcher/SwitchState.module.scss
@@ -11,6 +11,10 @@
   background-color: none;
   border: none;
   font-size: 18px;
+  color:black;
+  padding: .1rem;
+  padding-left: .3rem;
+  padding-right: .3rem;
 }
 
 .button:hover,
